--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="marcar_presenca">Marcar presença</string>
     <string name="encontrar_salar">Encontrar sala</string>
     <string name="encontrar_professor">Encontrar professor</string>
+    <string name="sair_da_conta">Sair da conta</string>
 </resources>
